--- a/aws-connect-vm-serverless/package.json
+++ b/aws-connect-vm-serverless/package.json
@@ -13,11 +13,12 @@
     "awesome-phonenumber": "^2.20.0",
     "babel-runtime": "^6.26.0",
     "jmespath": "^0.15.0",
+    "minimist": "^1.2.6",
     "node-fetch": "^2.6.0",
-    "node-jose": "^1.1.3",
+    "node-jose": "^2.1.1",
     "nodemailer": "^6.3.1",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
+    "request": "^2.88.2",
+    "request-promise": "4.2.4",
     "source-map-support": "^0.5.16",
     "utf8": "^3.0.0",
     "uuid": "^3.4.0",
@@ -39,17 +40,19 @@
     "eslint": "^6.4.0",
     "glob": "^7.1.5",
     "is-nan": "^1.3.0",
-    "jest": "^24.9.0",
-    "serverless": "^1.56.1",
-    "serverless-offline": "^5.7.3",
-    "serverless-prune-plugin": "^1.4.1",
-    "serverless-pseudo-parameters": "^2.4.0",
-    "serverless-webpack": "^5.3.1",
+    "jest": "^28.1.3",
+    "serverless": "^3.22.0",
+    "serverless-offline": "^9.2.6",
+    "serverless-prune-plugin": "^2.0.1",
+    "serverless-webpack": "^5.9.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2",
     "typescript": "^4.1.3",
     "maven": "^5.0.0"
+  },
+  "resolutions": {
+    "minimist": "^1.2.6"
   },
   "jest": {
     "verbose": true,
