--- a/templates/voicemail-for-amazon-connect.template.yaml
+++ b/templates/voicemail-for-amazon-connect.template.yaml
@@ -202,6 +202,9 @@ Resources:
     PortalBucket:
       Type: AWS::S3::Bucket
       Properties:
+        OwnershipControls:
+          Rules:
+            - ObjectOwnership: BucketOwnerPreferred
         PublicAccessBlockConfiguration:
           BlockPublicAcls: True
           BlockPublicPolicy: True
@@ -232,7 +235,7 @@ Resources:
         PolicyDocument:
           Statement:
             - Action:
-                - "s3:GetObject"
+                - "s3:*"
               Effect: "Deny"
               Resource: !Sub 'arn:aws:s3:::${VoicemailAccessLogBucket}/*'
               Principal: "*"
@@ -244,6 +247,9 @@ Resources:
       Type: AWS::S3::Bucket
       Properties:
         AccessControl: "LogDeliveryWrite"
+        OwnershipControls:
+          Rules:
+            - ObjectOwnership: BucketOwnerPreferred
         PublicAccessBlockConfiguration:
           BlockPublicAcls: True
           BlockPublicPolicy: True
