--- a/aws-connect-vm-serverless/package.json
+++ b/aws-connect-vm-serverless/package.json
@@ -41,15 +41,15 @@
     "glob": "^7.1.5",
     "is-nan": "^1.3.0",
     "jest": "^28.1.3",
+    "maven": "^5.0.0",
     "serverless": "^3.22.0",
     "serverless-offline": "^9.2.6",
     "serverless-prune-plugin": "^2.0.1",
     "serverless-webpack": "^5.9.0",
-    "webpack": "^4.19.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "^1.7.2",
     "typescript": "^4.1.3",
-    "maven": "^5.0.0"
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-node-externals": "^1.7.2"
   },
   "resolutions": {
     "minimist": "^1.2.6"
