--- a/source/aws-connect-vm-portal/templates/cloudfront.yml
+++ b/source/aws-connect-vm-portal/templates/cloudfront.yml
@@ -29,6 +29,9 @@ Resources:
   PortalBucket:
     Type: AWS::S3::Bucket
     Properties:
+      OwnershipControls:
+        Rules:
+          - ObjectOwnership: BucketOwnerPreferred
       PublicAccessBlockConfiguration:
         BlockPublicAcls: True
         BlockPublicPolicy: True
